--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.pth filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+backend/ai_models/computer_vision/hybrid_multitask_model.pth filter=lfs diff=lfs merge=lfs -text
