--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 backend/ai_models/computer_vision/hybrid_multitask_model.pth filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
