Save working changes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "AI4Health Mobile App Design",
+      "name": "AI4Health",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
